feat: atualiza cotação manual
